# text-analysis-app

./: .gitattributes  .gitignore  README.md  pyproject.toml
conf/: config.yaml
data/raw/: 1_korigovanje_squad_sr_baze.xlsx  2_10_korigovanje_squad_sr_baze.xlsx  2_11_korigovanje_squad_sr_baze.xlsx  2_1_korigovanje_squad_sr_baze.xlsx  2_2_korigovanje_squad_sr_baze.xlsx  2_3_korigovanje_squad_sr_baze.xlsx  2_4_korigovanje_squad_sr_baze.xlsx  2_5_korigovanje_squad_sr_baze.xlsx  2_6_korigovanje_squad_sr_baze.xlsx  2_7_korigovanje_squad_sr_baze.xlsx  2_8_korigovanje_squad_sr_baze.xlsx  2_9_korigovanje_squad_sr_baze.xlsx
text_analysis_app/: cli.py  processing.py
text_analysis_app.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
